删除多余按钮

--- a/app/src/main/res/layout/detailbill_header.xml
+++ b/app/src/main/res/layout/detailbill_header.xml
@@ -51,28 +51,18 @@
                 android:layout_toRightOf="@+id/month"
                 android:text="/2017" />
 
-            <ImageButton
-                android:id="@+id/hindButton"
-                android:layout_width="14dp"
-                android:layout_height="14dp"
-                android:layout_alignBottom="@+id/year"
-                android:layout_gravity="bottom"
-                android:layout_marginLeft="11dp"
-                android:layout_marginStart="11dp"
-                android:layout_toEndOf="@+id/year"
-                android:layout_toRightOf="@+id/year"
-                android:src="@mipmap/ic_launcher" />
 
-            <ImageView
-                android:id="@+id/menuButton"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignTop="@+id/month"
-                android:layout_gravity="bottom"
-                android:layout_marginRight="8dp"
-                android:src="@mipmap/ic_launcher" />
+
+            <!--<ImageView-->
+                <!--android:id="@+id/menuButton"-->
+                <!--android:layout_width="30dp"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:layout_alignParentEnd="true"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_alignTop="@+id/month"-->
+                <!--android:layout_gravity="bottom"-->
+                <!--android:layout_marginRight="8dp"-->
+                <!--android:src="@mipmap/ic_launcher" />-->
 
         </RelativeLayout>
         <RelativeLayout
