--- a/app/src/main/res/layout/activity_gu_piao_content.xml
+++ b/app/src/main/res/layout/activity_gu_piao_content.xml
@@ -643,7 +643,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@drawable/keyboradup"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:focusable="true"
+        android:focusableInTouchMode="true" >
 
         <EditText
             android:id="@+id/search_et"
