--- a/app/src/main/res/layout/activity_passage.xml
+++ b/app/src/main/res/layout/activity_passage.xml
@@ -27,6 +27,7 @@
                 android:scaleType="centerCrop"
                 android:src="#ffffff"
                 app:layout_collapseMode="parallax"
+                android:transitionName="share"
                 app:layout_collapseParallaxMultiplier="0.7" />
 
             <android.support.v7.widget.Toolbar
@@ -53,6 +54,7 @@
 
                 <TextView
                     android:id="@+id/passage_title"
+                    android:textColor="#383838"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
