--- a/app/src/main/res/layout/activity_gu_piao_content.xml
+++ b/app/src/main/res/layout/activity_gu_piao_content.xml
@@ -5,6 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.jungle.keepinmind1.Activity.ChartActivity">
+    <ProgressBar
+        android:id="@+id/pg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"/>
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
