--- a/app/src/main/res/layout/detailbill_header.xml
+++ b/app/src/main/res/layout/detailbill_header.xml
@@ -10,6 +10,7 @@
         android:fitsSystemWindows="true"
         >
 
+
         <ImageView
             android:id="@+id/background"
             android:layout_width="match_parent"
@@ -18,6 +19,14 @@
             android:src="@drawable/beijing"
              />
 
+        <com.example.jungle.keepinmind1.Utils.ProgressBottle
+            android:id="@+id/pb"
+            android:layout_width="100dp"
+            android:layout_below="@+id/toolbar"
+            android:layout_marginTop="30dp"
+            android:layout_height="130dp"
+            android:layout_marginRight="20dp"
+            android:layout_alignParentRight="true"/>
 
         <RelativeLayout
             android:id="@+id/toolbar"
@@ -66,6 +75,7 @@
 
         </RelativeLayout>
         <RelativeLayout
+            android:id="@+id/r1"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_marginLeft="16dp"
