--- a/app/src/main/res/layout/detailbill_header.xml
+++ b/app/src/main/res/layout/detailbill_header.xml
@@ -10,7 +10,6 @@
         android:fitsSystemWindows="true"
         >
 
-
         <ImageView
             android:id="@+id/background"
             android:layout_width="match_parent"
@@ -19,7 +18,7 @@
             android:src="@drawable/beijing"
              />
 
-        <com.example.jungle.keepinmind1.Utils.ProgressBottle
+        <com.example.jungle.keepinmind1.Utils.PublicUtil.ProgressBottle
             android:id="@+id/pb"
             android:layout_width="100dp"
             android:layout_below="@+id/toolbar"
