--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,41 +2,42 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/peripheralDynamics"
-        android:icon="@mipmap/ic_launcher"
-        android:title="周边动态"
+        android:id="@+id/inOut"
+        android:icon="@drawable/data"
+        android:title="收支统计"
         app:showAsAction="always" />
     <item
-        android:id="@+id/myCollection"
-        android:icon="@mipmap/ic_launcher"
-        android:title="我的收藏"
+        android:id="@+id/ocr"
+        android:icon="@drawable/xiaopiao"
+        android:title="小票识别"
         app:showAsAction="ifRoom" />
-
     <item
-        android:id="@+id/myLikes"
-        android:icon="@mipmap/ic_launcher"
-        android:title="我的赞"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/accountManagement"
-        android:icon="@mipmap/ic_launcher"
-        android:title="账号管理"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/clearCache"
-        android:icon="@mipmap/ic_launcher"
-        android:title="清理缓存数据"
+        android:id="@+id/uploadBook"
+        android:icon="@drawable/upload"
+        android:title="上传账本"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/voice"
+        android:icon="@drawable/voice1"
+        android:title="语音记账"
+        app:showAsAction="never" />
     <item
         android:id="@+id/settings"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/setting"
         android:title="设置"
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/clearCache"
+        android:icon="@drawable/clear"
+        android:title="清理缓存数据"
+        app:showAsAction="never" />
+
+
+    <item
         android:id="@+id/signOut"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/signout"
         android:title="退出账号"
         app:showAsAction="never" />
 
