登录注册功能完善1

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -107,13 +107,13 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <Button
-            android:id="@+id/SignIn"
+            android:id="@+id/Register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
             android:background="@color/colorBlue"
             android:elevation="10dp"
-            android:text="登 陆"
+            android:text="注 册"
             android:textColor="@color/colorWhite"
             android:textSize="18sp" />
     </android.support.v7.widget.CardView>
