--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -16,8 +16,8 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:src="@mipmap/ic_launcher"
-        android:id="@+id/icon_image"
+        android:src="@drawable/user"
+        android:id="@+id/icon_imagec"
         app:civ_border_width="2px"
         app:civ_border_color="@color/colorWhite"
         android:layout_alignParentTop="true"
@@ -29,10 +29,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/username"
-        android:text="用户名"
+        android:text="--"
         android:textSize="14sp"
         android:textColor="#ffffff"
-        android:layout_below="@+id/icon_image"
+        android:layout_below="@+id/icon_imagec"
         android:layout_marginTop="8dp"
         android:layout_centerHorizontal="true"
         />
@@ -42,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/description"
-        android:text="个人描述"
+        android:text="--"
         android:textColor="#ffffff"
         android:textSize="10sp"
         android:layout_below="@+id/username"
