--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -13,17 +13,19 @@
         android:layout_height="150dp"
         android:layout_below="@+id/toolbar">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="140dp"
-            android:layout_height="140dp"
-            android:layout_centerInParent="true"
-            android:src="@color/colorBlue" />
+        <!--<de.hdodenhof.circleimageview.CircleImageView-->
+            <!--android:layout_width="140dp"-->
+            <!--android:layout_height="140dp"-->
+            <!--android:layout_centerInParent="true"-->
+            <!--android:src="@color/colorBlue" />-->
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/headIcon"
             android:layout_width="125dp"
             android:layout_height="125dp"
             android:layout_centerInParent="true"
+            app:civ_border_width="2px"
+            app:civ_border_color="@color/colorBlue"
             android:src="@mipmap/ic_launcher" />
     </RelativeLayout>
 
