--- a/app/src/main/res/layout/fragment_in.xml
+++ b/app/src/main/res/layout/fragment_in.xml
@@ -12,9 +12,11 @@
         android:padding="20dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        >
 
         <TextView
+
             android:id="@+id/moneyTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -29,6 +31,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:focusableInTouchMode="true"
         android:id="@+id/Linear2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
